--- a/front/public/locales/de/translation.json
+++ b/front/public/locales/de/translation.json
@@ -1,48 +1,51 @@
 {
-    "english": "Englisch",
-    "germany": "Deutschland",
-    "italy": "Italien",
-    "loginText": "Melde dich bei einem Konto an",
-    "email": "E-Mail",
-    "emailText": "Gib deine E-Mail ein",
-    "password": "Passwort",
-    "passwordText": "Gib dein Passwort ein",
-    "login": "Anmelden",
-    "dontHaveAccout": "Kein Konto?",
-    "registerHere": "Hier registrieren",
-    "createAccount": "Ein Konto erstellen",
-    "name": "Name",
-    "nameText": "Gib deinen Namen ein",
-    "register": "Registrieren",
-    "alreadyHaveAccount": "Hast du schon ein Konto?",
-    "loginHere": "Hier anmelden",
-    "lightMode": "Lichtmodus",
-    "darkMode": "Dunkelmodus",
-    "sort": "Sortieren",
-    "filter": "Filtern",
-    "addNewTask": "Neue Aufgabe hinzufügen",
-    "To Do": "Zu erledigen",
-    "In Progress": "In Bearbeitung",
-    "Done": "Erledigt",
-    "LOW": "NIEDRIG",
-    "MEDIUM": "MITTEL",
-    "HIGH": "HOCH",
-    "Uncategorized": "Ohne Kategorie",
-    "Personal": "Persönlich",
-    "Work": "Arbeit",
-    "School": "Schule",
-    "taskTitle": "Titel",
-    "taskDesc": "Beschreibung",
-    "taskPriority": "Priorität",
-    "taskStatus": "Status",
-    "taskCategory": "Kategorie",
-    "taskDueDate": "Fälligkeitsdatum",
-    "taskPercentage": "Prozent",
-    "cancelButton": "Abbrechen",
-    "submitButton": "Bestätigen",
-    "taskComment": "Kommentar",
-    "taskComments": "Kommentare",
-    "selectPriority": "Priorität auswählen",
-    "selectStatus": "Status auswählen",
-    "taskCreationDate": "Erstellungsdatum"
+    "english": "Inglese",
+    "germany": "Germania",
+    "italy": "Italia",
+    "loginText": "Accedi a un account",
+    "email": "Email",
+    "emailText": "Inserisci la tua email",
+    "password": "Password",
+    "passwordText": "Inserisci la tua password",
+    "login": "Accedi",
+    "dontHaveAccout": "Non hai un account?",
+    "registerHere": "Registrati qui",
+    "createAccount": "Crea un account",
+    "name": "Nome",
+    "nameText": "Inserisci il tuo nome",
+    "register": "Registrati",
+    "alreadyHaveAccount": "Hai già un account?",
+    "loginHere": "Accedi qui",
+    "lightMode": "Modalità chiara",
+    "darkMode": "Modalità scura",
+    "sort": "Ordina",
+    "filter": "Filtro",
+    "addNewTask": "Aggiungi nuovo",
+    "edit": "Modifica",
+    "To Do": "Da fare",
+    "In Progress": "In corso",
+    "Done": "Fatto",
+    "LOW": "BASSA",
+    "MEDIUM": "MEDIA",
+    "HIGH": "ALTA",
+    "Uncategorized": "Non categorizzato",
+    "Personal": "Personale",
+    "Work": "Lavoro",
+    "School": "Scuola",
+    "taskTitle": "Titolo",
+    "taskDesc": "Descrizione",
+    "taskPriority": "Priorità",
+    "taskStatus": "Stato",
+    "taskCategory": "Categoria",
+    "taskDueDate": "Data di scadenza",
+    "taskProgress": "Progresso",
+    "cancelButton": "Annulla",
+    "submitButton": "Invia",
+    "taskComment": "Commento",
+    "taskComments": "Commenti",
+    "selectPriority": "Seleziona priorità",
+    "selectStatus": "Seleziona stato",
+    "taskCreationDate": "Data di creazione",
+    "newest": "Più recente",
+    "oldest": "Più vecchio"
 }
