--- a/front/public/locales/it/translation.json
+++ b/front/public/locales/it/translation.json
@@ -19,15 +19,16 @@
     "lightMode": "Modalità chiara",
     "darkMode": "Modalità scura",
     "sort": "Ordina",
-    "filter": "Filtra",
+    "filter": "Filtro",
     "addNewTask": "Aggiungi nuovo",
+    "edit": "Modifica",
     "To Do": "Da fare",
     "In Progress": "In corso",
-    "Done": "Completato",
-    "LOW": "BASSO",
-    "MEDIUM": "MEDIO",
-    "HIGH": "ALTO",
-    "Uncategorized": "Senza categoria",
+    "Done": "Fatto",
+    "LOW": "BASSA",
+    "MEDIUM": "MEDIA",
+    "HIGH": "ALTA",
+    "Uncategorized": "Non categorizzato",
     "Personal": "Personale",
     "Work": "Lavoro",
     "School": "Scuola",
@@ -37,12 +38,14 @@
     "taskStatus": "Stato",
     "taskCategory": "Categoria",
     "taskDueDate": "Data di scadenza",
-    "taskPercentage": "Percentuale",
+    "taskProgress": "Progresso",
     "cancelButton": "Annulla",
     "submitButton": "Invia",
     "taskComment": "Commento",
     "taskComments": "Commenti",
     "selectPriority": "Seleziona priorità",
     "selectStatus": "Seleziona stato",
-    "taskCreationDate": "Data di creazione"
+    "taskCreationDate": "Data di creazione",
+    "newest": "Più recente",
+    "oldest": "Più vecchio"
 }
